[#128865231] Fixed jumping issue

--- a/src/components/InlineEdit/style.scss
+++ b/src/components/InlineEdit/style.scss
@@ -5,18 +5,20 @@
 @mixin inline-edit-button($fill) {
   cursor: pointer;
   fill: $fill;
+  height: 100%;
   margin-left: 7px;
   position: relative;
-  top: 3px;
   width: 12px;
 }
 
 .inline-edit-wrapper {
+  height: 15px;
   position: relative;
 
   .inline-text-wrapper {
     color: black;
     display: inline-block;
+    height: 100%;
     max-width: calc(100% - 70px);
     min-width: 50px;
     outline: none;
@@ -26,6 +28,7 @@
 
   .inline-button-wrapper {
     display: inline;
+    height: 100%;
     margin-left: 2px;
     width: 46px;
   }
